...
              <AppText color="secondary">{itemDescription}</AppText>
            </Card>
          ))}
        </>
      )}
      <AppButton
        label="Cancel adding exercise"
        onPress={onCancel}
        variant="ghost"
      />
    </View>
  );
}
...
